Monitor register: fix display on mobiles

--- a/src/app/modules/monitor/components/register-monitor/register-monitor.component.scss
+++ b/src/app/modules/monitor/components/register-monitor/register-monitor.component.scss
@@ -1,10 +1,6 @@
 @import "colors";
 @import "breakpoints";
 
-.mat-stepper-horizontal, .mat-stepper-vertical {
-  background-color: transparent !important;
-}
-
 .login-container {
   max-width: 680px;
   margin: 0 auto;
@@ -15,8 +11,11 @@
 }
 
 .login {
-  padding: 0 30px;
-  padding-top: 30px;
+  padding: 30px 30px 0;
+
+  @include mobile-all() {
+    padding: 30px 10px 0 0;
+  }
 
   mat-icon {
     color: #777;
@@ -33,7 +32,7 @@
   }
 
   @include mobile-all() {
-    max-width: 75%;
+    max-width: 100%;
     margin: auto;
   }
 
